unpackaged/main/default/objects/Vehicle__c/Vehicle__c.object-meta.xml
<CustomObject>
    <label>Pricing Vehicle Request</label>
    <nameField>
        <displayFormat>VN-{0000}</displayFormat>
        <label>Vehicle Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>