unpackaged/main/default/objects/Vehicle__c/fields/Add_Refregirator__c.field-meta.xml
<CustomField>
    <fullName>Add_Refregirator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Refregirator</label>
    <type>Checkbox</type>
</CustomField>