unpackaged/main/default/objects/Vehicle__c/fields/Add_Trailer_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Add_Trailer_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Trailer/Equipment</label>
    <type>Checkbox</type>
</CustomField>