unpackaged/main/default/objects/Vehicle__c/fields/ET_Annual_KM__c.field-meta.xml
<CustomField>
    <fullName>ET_Annual_KM__c</fullName>
    <label>Annual KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>