unpackaged/main/default/objects/Vehicle__c/fields/ET_Annual_Target_Price__c.field-meta.xml
<CustomField>
    <fullName>ET_Annual_Target_Price__c</fullName>
    <label>Annual Target Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>