unpackaged/main/default/objects/Vehicle__c/fields/ET_Contract_Period__c.field-meta.xml
<CustomField>
    <fullName>ET_Contract_Period__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Period</label>
    <type>TextArea</type>
</CustomField>