unpackaged/main/default/objects/Vehicle__c/fields/ET_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Fuel_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fuel Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>