unpackaged/main/default/objects/Vehicle__c/fields/ET_Insurance_Coverage__c.field-meta.xml
<CustomField>
    <fullName>ET_Insurance_Coverage__c</fullName>
    <label>Insurance Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UAE Only</fullName>
            </value>
            <value>
                <fullName>UAE &amp; Oman</fullName>
            </value>
            <value>
                <fullName>UAE &amp; GCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>