unpackaged/main/default/objects/Vehicle__c/fields/ET_Number_of_seats__c.field-meta.xml
<CustomField>
    <fullName>ET_Number_of_seats__c</fullName>
    <label>Number of seats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>