unpackaged/main/default/objects/Vehicle__c/fields/ET_Other_One_Time_Requirement__c.field-meta.xml
<CustomField>
    <fullName>ET_Other_One_Time_Requirement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other One Time Requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>