unpackaged/main/default/objects/Vehicle__c/fields/ET_Price_Utilization__c.field-meta.xml
<CustomField>
    <fullName>ET_Price_Utilization__c</fullName>
    <label>Price Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>