unpackaged/main/default/objects/Vehicle__c/fields/ET_Route__c.field-meta.xml
<CustomField>
    <fullName>ET_Route__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Route</label>
    <type>TextArea</type>
</CustomField>