unpackaged/main/default/objects/Vehicle__c/fields/ET_Service_Emirate__c.field-meta.xml
<CustomField>
    <fullName>ET_Service_Emirate__c</fullName>
    <label>Service Emirate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Sharjah</fullName>
            </value>
            <value>
                <fullName>Ajman</fullName>
            </value>
            <value>
                <fullName>UMM Al Quawain</fullName>
            </value>
            <value>
                <fullName>Ras Al Khaimah</fullName>
            </value>
            <value>
                <fullName>Fujairah</fullName>
            </value>
            <value>
                <fullName>Abu-Dhabi</fullName>
                <isActive>false</isActive>
                <label>Abu-Dhabi</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>