unpackaged/main/default/objects/Vehicle__c/fields/ET_Specific_requirements__c.field-meta.xml
<CustomField>
    <fullName>ET_Specific_requirements__c</fullName>
    <label>Specific requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>