unpackaged/main/default/objects/Vehicle__c/fields/ET_Vehicle_category__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_category__c</fullName>
    <label>Vehicle category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>