unpackaged/main/default/objects/Vehicle__c/fields/ET_Vehicle_Condition__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Condition__c</fullName>
    <label>Vehicle Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>