unpackaged/main/default/objects/Vehicle__c/fields/ET_Vehicle_Current_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Current_Purchase_Price__c</fullName>
    <label>Vehicle Current Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>