unpackaged/main/default/objects/Vehicle__c/fields/ET_Vehicle_Description__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>