unpackaged/main/default/objects/Vehicle__c/fields/ET_Vehicle_Fuel__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Fuel__c</fullName>
    <label>Vehicle Fuel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>