unpackaged/main/default/objects/Vehicle__c/fields/ET_Vehicle_Fuel_Consumption__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Fuel_Consumption__c</fullName>
    <label>Vehicle Fuel Consumption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>