unpackaged/main/default/objects/Vehicle__c/fields/ET_Vehicle_Line__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Line__c</fullName>
    <label>Vehicle Line Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>