unpackaged/main/default/objects/Vehicle__c/fields/ET_Vehicle_MAKE__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_MAKE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle MAKE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>