unpackaged/main/default/objects/Vehicle__c/fields/ET_Vehicle_Model_Year__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Model_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Manufacture Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>