unpackaged/main/default/objects/Vehicle__c/fields/ET_Vehicle_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Quantity__c</fullName>
    <label>Vehicle Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>