unpackaged/main/default/objects/Vehicle__c/fields/ET_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>