unpackaged/main/default/objects/Vehicle__c/fields/ET_Working_Days_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>ET_Working_Days_Per_Week__c</fullName>
    <label>Working Days Per Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>