unpackaged/main/default/objects/Vehicle__c/fields/ET_Working_Months_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>ET_Working_Months_Per_Year__c</fullName>
    <label>Working Months Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>