unpackaged/main/default/objects/Vehicle__c/fields/Refregirator_Model__c.field-meta.xml
<CustomField>
    <fullName>Refregirator_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refregirator Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>