unpackaged/main/default/objects/Vehicle__c/fields/Refregirator_subtype__c.field-meta.xml
<CustomField>
    <fullName>Refregirator_subtype__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refregirator subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>