unpackaged/main/default/objects/Vehicle__c/fields/Refregirator_Type__c.field-meta.xml
<CustomField>
    <fullName>Refregirator_Type__c</fullName>
    <defaultValue>&#39;Cooling Unit&#39;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Refregirator Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>