unpackaged/main/default/objects/Vehicle__c/fields/Refrigerator_condition__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_condition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refrigerator condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>