unpackaged/main/default/objects/Vehicle__c/fields/Refrigerator_model_year__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_model_year__c</fullName>
    <label>Refrigerator model year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>