unpackaged/main/default/objects/Vehicle__c/fields/Refrigerator_original_purchase_price__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_original_purchase_price__c</fullName>
    <label>Refrigerator original purchase price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>