unpackaged/main/default/objects/Vehicle__c/fields/Refrigerator_quantity__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_quantity__c</fullName>
    <label>Refrigerator quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>