unpackaged/main/default/objects/Vehicle__c/fields/Specific_Requirements_Logo__c.field-meta.xml
<CustomField>
    <fullName>Specific_Requirements_Logo__c</fullName>
    <label>Specific Requirements Logo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>