unpackaged/main/default/objects/Vehicle__c/fields/Total_Student_Per_Passenger__c.field-meta.xml
<CustomField>
    <fullName>Total_Student_Per_Passenger__c</fullName>
    <label>Total Student Per Passenger</label>
    <precision>14</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>