unpackaged/main/default/objects/Vehicle__c/fields/Trailer_condition__c.field-meta.xml
<CustomField>
    <fullName>Trailer_condition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trailer condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>