unpackaged/main/default/objects/Vehicle__c/fields/Trailer_Equipment_Make__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Equipment_Make__c</fullName>
    <defaultValue>&#39;TRAILERS&#39;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Trailer/Equipment Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>