unpackaged/main/default/objects/Vehicle__c/fields/Trailer_Equipment_subtype__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Equipment_subtype__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trailer/Equipment subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>