unpackaged/main/default/objects/Vehicle__c/fields/Trailer_Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Equipment_Type__c</fullName>
    <defaultValue>&quot;Trailer&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Trailer/Equipment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>