unpackaged/main/default/objects/Vehicle__c/fields/Trailer_External_Maintenance_Cost__c.field-meta.xml
<CustomField>
    <fullName>Trailer_External_Maintenance_Cost__c</fullName>
    <label>Trailer External Maintenance Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>