unpackaged/main/default/objects/Vehicle__c/fields/Trailer_model_year__c.field-meta.xml
<CustomField>
    <fullName>Trailer_model_year__c</fullName>
    <label>Trailer model year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>